@@ -8466,6 +8466,264 @@ literal|"*[count(//lst[@name='facet_fields']/lst/int)=0]"
 argument_list|)
 expr_stmt|;
 block|}
+comment|/**     * kind of an absurd tests because if there is an inifnite loop, it     * would ver finish -- but at least it ensures that<i>if</i> one of     * these requests return, they return an error     */
+DECL|method|testRangeFacetInfiniteLoopDetection
+specifier|public
+name|void
+name|testRangeFacetInfiniteLoopDetection
+parameter_list|()
+block|{
+for|for
+control|(
+name|String
+name|field
+range|:
+operator|new
+name|String
+index|[]
+block|{
+literal|"foo_f"
+block|,
+literal|"foo_sf"
+block|,
+literal|"foo_d"
+block|,
+literal|"foo_sd"
+block|,
+literal|"foo_i"
+block|,
+literal|"foo_si"
+block|}
+control|)
+block|{
+name|assertQEx
+argument_list|(
+literal|"no zero gap error: "
+operator|+
+name|field
+argument_list|,
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"*:*"
+argument_list|,
+literal|"facet"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"facet.range"
+argument_list|,
+name|field
+argument_list|,
+literal|"facet.range.start"
+argument_list|,
+literal|"23"
+argument_list|,
+literal|"facet.range.gap"
+argument_list|,
+literal|"0"
+argument_list|,
+literal|"facet.range.end"
+argument_list|,
+literal|"100"
+argument_list|)
+argument_list|,
+literal|400
+argument_list|)
+expr_stmt|;
+block|}
+for|for
+control|(
+name|String
+name|field
+range|:
+operator|new
+name|String
+index|[]
+block|{
+literal|"foo_pdt"
+block|,
+literal|"foo_dt"
+block|}
+control|)
+block|{
+for|for
+control|(
+name|String
+name|type
+range|:
+operator|new
+name|String
+index|[]
+block|{
+literal|"date"
+block|,
+literal|"range"
+block|}
+control|)
+block|{
+name|assertQEx
+argument_list|(
+literal|"no zero gap error for facet."
+operator|+
+name|type
+operator|+
+literal|": "
+operator|+
+name|field
+argument_list|,
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"*:*"
+argument_list|,
+literal|"facet"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"facet."
+operator|+
+name|type
+argument_list|,
+name|field
+argument_list|,
+literal|"facet."
+operator|+
+name|type
+operator|+
+literal|".start"
+argument_list|,
+literal|"NOW"
+argument_list|,
+literal|"facet."
+operator|+
+name|type
+operator|+
+literal|".gap"
+argument_list|,
+literal|"+0DAYS"
+argument_list|,
+literal|"facet."
+operator|+
+name|type
+operator|+
+literal|".end"
+argument_list|,
+literal|"NOW+10DAY"
+argument_list|)
+argument_list|,
+literal|400
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+for|for
+control|(
+name|String
+name|field
+range|:
+operator|new
+name|String
+index|[]
+block|{
+literal|"foo_f"
+block|,
+literal|"foo_sf"
+block|}
+control|)
+block|{
+name|assertQEx
+argument_list|(
+literal|"no float underflow error: "
+operator|+
+name|field
+argument_list|,
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"*:*"
+argument_list|,
+literal|"facet"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"facet.range"
+argument_list|,
+name|field
+argument_list|,
+literal|"facet.range.start"
+argument_list|,
+literal|"100000000000"
+argument_list|,
+literal|"facet.range.end"
+argument_list|,
+literal|"100000086200"
+argument_list|,
+literal|"facet.range.gap"
+argument_list|,
+literal|"2160"
+argument_list|)
+argument_list|,
+literal|400
+argument_list|)
+expr_stmt|;
+block|}
+for|for
+control|(
+name|String
+name|field
+range|:
+operator|new
+name|String
+index|[]
+block|{
+literal|"foo_d"
+block|,
+literal|"foo_sd"
+block|}
+control|)
+block|{
+name|assertQEx
+argument_list|(
+literal|"no double underflow error: "
+operator|+
+name|field
+argument_list|,
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"*:*"
+argument_list|,
+literal|"facet"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"facet.range"
+argument_list|,
+name|field
+argument_list|,
+literal|"facet.range.start"
+argument_list|,
+literal|"9900000000000"
+argument_list|,
+literal|"facet.range.end"
+argument_list|,
+literal|"9900000086200"
+argument_list|,
+literal|"facet.range.gap"
+argument_list|,
+literal|"0.0003"
+argument_list|)
+argument_list|,
+literal|400
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 end_class
 
